css/styles.css
/* ... */
* {
    border: 0 none;
    margin: 0;
    padding: 0;
}

.hidden { display: none !important; }
.sr-only {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    overflow: hidden;
    clip: rect(0, 0, 0, 0);
    white-space: nowrap;
    border: 0;
}

.sr-only:focus {
  background-color: var(--background-color);
  clip: auto !important;
  clip-path: none;
  color: var(--primary-text-color);
  display: block;
  font-size: 1em;
  height: auto;
  left: 5px;
  line-height: normal;
  padding: 15px 23px 14px;
  text-decoration: none;
  top: 5px;
  width: auto;
  z-index: 100000; 
}

.slide {
    overflow-y: hidden !important;
    -webkit-transition: height .5s ease-in !important;
            transition: height .5s ease-in !important;
}

/*** BASIC LAYOUT ***/

html, body { height: 100%; }

body { 
    display: flex;
    flex-direction: column;
    color: var(--primary-text-color);
    background-color: var(--background-color);
}

#main { flex: 1 0 auto; }
#header, #footer { flex: 0 0 auto; }

#main {
    padding: 5em 0 4em;
}

.container {
    max-width: 58em;
    padding: 0 0.5em;
    margin: 0 auto;
}
.widescreen .container { max-width: 72em; }

/* very ugly overflow fix, avoid this whenever possible! */
#main .container { overflow-x: auto; }

/*** BASIC LAYOUT: HEADER ***/

#header {
    color: var(--primary-text-color);
    background: var(--background-color);
    -webkit-box-shadow: 2px 9px 25px -10px rgba(0,0,0,0.10);
    -moz-box-shadow: 2px 9px 25px -10px rgba(0,0,0,0.10);
    box-shadow: 2px 9px 25px -10px rgba(0,0,0,0.10);
}

#page-title {
   background-repeat: none;
   background-size: cover;
   height: 15rem;
}

#page-title h1 {
    padding: 2.6rem 0 1.3rem;
}

/** HEADER: Area Header Colours **/

.header-default {
    background-image: var(--header-shape);
}

.header-default h1 {
    color: var(--primary-text-color);
}

.header-connectivity {
    background-image: var(--area-connectivity);
}

.header-connectivity h1 {
    color: var(--area-connectivity-text);
}

.header-computation {
    background-image: var(--area-computation);
}

.header-computation h1 {
    color: var(--area-computation-text);
}

.header-collaboration {
    background-image: var(--area-collaboration);
}

.header-collaboration h1 {
    color: var(--area-collaboration-text);
}

.header-knowledge {
    background-image: var(--area-knowledge);
}

.header-knowledge h1 {
    color: var(--area-knowledge-text);
}

.header-security {
    background-image: var(--area-security);
}

.header-security h1 {
    color: var(--area-security-text);
}

.header-innovation {
    background-image: var(--area-innovation);
}

.header-innovation h1 {
    color: var(--area-innovation-text);
}
/** Header Branding **/

#title, #logo {
    float: left;
    padding: 1.2em 2em 1.2em 0;
}

#title a:hover {
    text-decoration: none;
}

#title { margin: 0; }
#title p { font-style: italic; }

#title span.site-title { margin: 0; display: inline-block; }

#logo img { display: block; height: 100%; }

#logo + #title.tagline span.site-title { margin: 0; }

#nav {
    padding: 1.6rem 0;
    text-align: right;
}
#nav ul {
    list-style: none;
    margin: 0;
    padding: 0;
}
#nav ul li {
    display: inline-block;
    padding: 0;
    font-weight: 400;
}

#nav a, 
#nav-toggle { 
    color: var(--primary-text-color);
    padding: .5rem;
    opacity: 1;
}

#nav .active a {
    border-bottom: solid 3px var(--menu-selector-color);
} 
#nav a:hover, 
#nav-toggle:hover { 
    opacity: .6;
    border-bottom: solid 3px var(--menu-selector-color);
    text-decoration: none;
}

#nav-toggle { display: none; }


#nav-toggle .icon-menu span.dash {
    display: inline-block;
    height: .25rem;
    background-color: var(--primary-text-color);
    width: 1.8rem;
    margin-bottom: .4rem;
}

/* IE8 + IE9 clearfix */
#header > .container:after {
    content: '';
    display: block;
    clear: both;
}

#header .separator {
    border-bottom: solid 1px var(--header-underline);
    height: 0;
    z-index: 6;
    display: block;
}

/*** BASIC LAYOUT: FOOTER ***/

#footer {
    margin-block-start: 3rem;
}

#footer a { color: #ddd; }
#footer a:hover { color: #fff; }

#footer p {
    margin: 0;
    padding-block-end: 0.35rem;
}

#footer .social {
    float: right;
    padding: 1.5em 0 1.5em 1em;
    font-size: 2rem;
}

#footer .footer-unit-information {
    background-color: var(--footer-background);
    color: var(--footer-text-color);
    padding: 3.3rem;
}
#footer .footer-unit-information .entity-information {
    font-weight: 500;
}

#footer .footer-copyright {
    color: var(--primary-text-color);
    background-color: var(--background-color);
    padding: 2.5rem;
}

#footer .footer-copyright .copyright-information {
    font-size: 0.8rem;
    padding: 1rem;
}

#footer .footer-copyright .footer-copyright-logos {
    display: flex;
}

@media (max-width: 767px) {
    #footer .footer-copyright .footer-copyright-logos {
        flex-direction: column;
    }
}

#footer .footer-copyright .footer-copyright-logos img {
    max-height: 4.5rem;
    display: inline-block;
    margin-block-start: 1.5rem;
    margin-inline-end: 2rem;
}

article {
    display: block;
    width: 100%;
}
/* ... */

